[gd_scene load_steps=3 format=2]

[ext_resource path="res://Asset/Kenney/weapon_gun.png" type="Texture" id=1]
[ext_resource path="res://Script/gun_base.gd" type="Script" id=2]

[node name="gun" type="Sprite"]
position = Vector2( -1.5, 0 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="gun_pos" type="Position2D" parent="."]
position = Vector2( 11.5, 0 )

[node name="shoot_direction" type="Position2D" parent="."]
position = Vector2( 14.5, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
